# PySpecTools

./: .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  api.html  conda.yml  examples.html  faq.html  genindex.html  index.html  install.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pyspectools.astro.html  pyspectools.fast.html  pyspectools.html  pyspectools.mmw.html  pyspectools.models.html  pyspectools.qchem.html  pyspectools.spectra.html  search.html  searchindex.js  setup.html  setup.py
_modules/: index.html
_sources/: examples.rst.txt  index.rst.txt  pyspectools.fast.rst.txt  pyspectools.models.rst.txt  pyspectools.qchem.rst.txt  pyspectools.rst.txt  pyspectools.spectra.rst.txt
_static/: custom.css
docs/: Makefile  faq.html  genindex.html  index.html  install.html  modules.html  notes.md  objects.inv  py-modindex.html  pyspectools.astro.html  pyspectools.fast.html  pyspectools.html  pyspectools.mmw.html  pyspectools.qchem.html  pyspectools.spectra.html  search.html  searchindex.js  setup.html
doctrees/: api.doctree  environment.pickle  examples.doctree  faq.doctree  index.doctree  install.doctree  modules.doctree  pyspectools.astro.doctree  pyspectools.doctree  pyspectools.fast.doctree  pyspectools.mmw.doctree  pyspectools.models.doctree  pyspectools.qchem.doctree  pyspectools.spectra.doctree  setup.doctree
examples/: experiment_example.html  identifying_molecules.html
pyspectools/: __init__.py  _version.py  autofit.py  database.py  figurefactory.py  (+19 more)
pyspectools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+215 files in other folders)
